--- a/npm/package.json
+++ b/npm/package.json
@@ -9,6 +9,8 @@
     "license": "MIT",
     "version": "1.0.0",
     "dependencies": {
+        "body-parser": "^1.18.3",
+        "dotenv": "^6.2.0",
         "express": "^4.16.4"
     },
     "repository": {
