--- a/Udemy/TodoAPINode/package.json
+++ b/Udemy/TodoAPINode/package.json
@@ -7,7 +7,7 @@
     "test": "export NODE_ENV=test && mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'",
     "start": "nodemon server/server.js",
-    "start-play": "nodemon playground/mongoose-remove.js"
+    "start-play": "nodemon playground/hashing.js"
   },
   "engines": {
     "node": "8.11.4"
@@ -32,10 +32,14 @@
     "supertest": "^3.3.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10",
-    "mongoose": "^5.4.4"
+    "mongoose": "^5.4.4",
+    "validator": "^10.11.0"
   }
 }
