--- a/Udemy/ChatAppNode/package.json
+++ b/Udemy/ChatAppNode/package.json
@@ -4,7 +4,10 @@
   "description": "Chat Application Node",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'",
+    "start": "nodemon server/server.js",
+    "play": "nodemon playground/time.js"
   },
   "repository": {
     "type": "git",
@@ -14,10 +17,23 @@
     "chat",
     "node"
   ],
+  "engines": {
+    "node": "10.15.0"
+  },
   "author": "Sankar",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/GaurisankarJ/Node/issues"
   },
-  "homepage": "https://github.com/GaurisankarJ/Node#readme"
+  "homepage": "https://github.com/GaurisankarJ/Node#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "jquery": "^3.3.1",
+    "moment": "^2.24.0",
+    "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "expect": "^24.1.0",
+    "mocha": "^6.0.0"
+  }
 }
