--- a/Projects/AlmaBase/package.json
+++ b/Projects/AlmaBase/package.json
@@ -2,7 +2,7 @@
   "name": "almabase",
   "version": "1.0.0",
   "description": "",
-  "main": "server/server.js",
+  "main": "server/index.js",
   "scripts": {
     "start": "nodemon server/server.js"
   },
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "morgan": "^1.10.0"
